Update dockerfile and made a separated dockerfile for gpu

--- a/docker/Dockerfile_gpu
+++ b/docker/Dockerfile_gpu
@@ -1,20 +1,26 @@
-FROM continuumio/miniconda3
+FROM nvidia/cuda:9.1-runtime-ubuntu16.04
+
+# install anaconda
+ENV PATH /opt/conda/bin:$PATH
+COPY install_miniconda.sh .
+RUN bash ./install_miniconda.sh && rm install_miniconda.sh
 
 # get data
 RUN mkdir /data/
 RUN apt-get update && apt-get install -y unzip
 RUN cd /data && wget https://os.unil.cloud.switch.ch/fma/fma_small.zip -O fma_small.zip && unzip fma_small.zip && rm fma_small.zip
 
-# install tensorflow
-RUN conda install -c anaconda tensorflow==1.12
+# install tensorflow for GPU
+RUN conda install -y -c conda-forge tensorflow-gpu
 
-# install pandas
+# Downgrade to cudatoolkit 9.0 for compatibility reasons
+RUN conda install -y -c conda-forge cudatoolkit=9.0
+
+RUN conda install -y -c anaconda tqdm
 RUN conda install -y -c anaconda pandas
 
-# install ffmpeg (for loading mp3 files)
 RUN conda install -y ffmpeg
 
-# clone git repo of the project
 RUN mkdir /workspace/ && cd /workspace/ && git clone https://github.com/romi1502/genre_classification_ensea_project.git
 WORKDIR /workspace/genre_classification_ensea_project
 
