--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,9 @@
-FROM continuumio/miniconda3
+FROM continuumio/miniconda3:4.6.14
 
 # get data
 RUN mkdir /data/
-RUN apt-get update && apt-get install -y unzip
-RUN cd /data && wget https://os.unil.cloud.switch.ch/fma/fma_small.zip -O fma_small.zip && unzip fma_small.zip && rm fma_small.zip
+RUN apt-get update && apt-get install -y p7zip-full
+RUN cd /data && wget https://os.unil.cloud.switch.ch/fma/fma_small.zip -O fma_small.zip && 7z x fma_small.zip && rm fma_small.zip
 
 # install tensorflow
 RUN conda install -c anaconda tensorflow==1.12
